fix: resolve radar overflowing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,6 +152,7 @@ body {
   color: var(--color-primary-100);
   background: var(--color-secondary-300);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: clip;
 }
 
 .gradient-text {
